# Alice

./: Makefile  README.md  pyproject.toml  requirements.txt
alice/: __init__.py
alice/configs/: __init__.py  shared_config.py  t2v_14b.py
alice/distributed/: fsdp.py  sequence_parallel.py  ulysses.py  util.py
alice/models/: __init__.py  attention.py  text_encoder.py  tokenizers.py  transformer.py  vae.py  vae22.py
alice/pipeline/: __init__.py  generator.py  scheduler_ddim.py  scheduler_dpm.py  scheduler_unipc.py
alice/utils/: prompt_extend.py  qwen_vl_utils.py  system_prompt.py  utils.py
configs/: paths.yaml
scripts/: generate.py
tests/: test_configs.py  test_imports.py  test_shapes.py
